--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
 node_modules
 backend/uploads/*
 .env
+
+# Database
+backend/research.db
+backend/research.db-journal
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Environment files
+backend/.env.local
+backend/.env.development
+backend/.env.test
+backend/.env.production
+
+# OS files
+.DS_Store
+Thumbs.db
