--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "research-repository",
   "version": "1.0.0",
@@ -6,15 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev:local": "NODE_ENV=development nodemon server.js",
+    "dev:network": "NODE_ENV=production nodemon server.js",
+    "test:local": "NODE_ENV=development PORT=3001 node server.js",
+    "test:production": "NODE_ENV=production PORT=3001 node server.js",
+    "setup": "cp .env.example .env && echo 'Please edit .env file with your configuration'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "multer": "^1.4.5-lts.1",
+    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@google/generative-ai": "^0.2.1"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
